fix: card list total alignment

--- a/src/sass/components/_card-list.scss
+++ b/src/sass/components/_card-list.scss
@@ -51,6 +51,7 @@
       font-weight: var(--neon-font-weight-semi-bold);
       width: 30%;
       text-align: right;
+      margin-left: auto;
     }
 
     &__card {
